# KohotLibrary

./: CMakeLists.txt  main.cpp
Data/: groups.json
include/: base_collection.hpp  console_colors.hpp  final_menu.hpp  group.hpp  group_menu.hpp  groups_collection.hpp  groups_manager_menu.hpp  json_utils.hpp  kohot.hpp  menu.hpp  paths.hpp  player.hpp  players_collection.hpp  players_menu.hpp  players_sorter.hpp  settings.hpp  team.hpp  teams_creator.hpp  user_interaction.hpp  utility_functions.hpp
include/nlohmann/: json.hpp
src/: base_collection.cpp  final_menu.cpp  group.cpp  group_menu.cpp  groups_collection.cpp  groups_manager_menu.cpp  json_utils.cpp  kohot.cpp  menu.cpp  paths.cpp  player.cpp  players_collection.cpp  players_menu.cpp  players_sorter.cpp  settings.cpp  team.cpp  teams_creator.cpp  utility_functions.cpp
